--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "radium": "^0.18.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
